--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.5",
     "flowbite": "^1.6.5",
     "moment": "^2.30.1",
+    "monaco-editor": "^0.52.2",
     "monaco-themes": "^0.4.5",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
